src/assets/css/style.css
/*!
Theme Name: DKUK
Theme URI: https://github.com/jclwilson/dkuk-wp-theme
Author: Jacob Charles Wilson
Author URI: https://jacobcharleswilson.com
Description: WordPress theme developed by Jacob Charles Wilson (@jclwilson) for DKUK Salon, London.
Version: 1.0
Text Domain: dkuk
*/

/* Set variables */

:root {
	/* spacing and sizing */
	--dkuk-root-font-size: 16px;
	--dkuk-bg-line: 0.4rem;
	--dkuk-line-height: 2.7rem;
	/* colours */
	--dkuk-primary-colour: #222222;
	--dkuk-secondary-colour: #fefefe;
}

/* Start by setting basic rules for elements */
/* Many of these are setting cosntant values or basic defaults that need to be inherited */
/* These could be set in the reset CSS, but I want to keep that vanilla and entirely within the critical css section of the header */
html {
	/* Sets root font size for rem unit */
	font-size: 16px;

	/* Typography */
	font-family: 'WorkSans', sans-serif;

	/* ensures border-box sizing, useful for masonry and flexboxgrid */
	box-sizing: border-box;
}

/* Ensures border-box sizing */
*, *:before, *:after {
	box-sizing: inherit;
}

body {
	/* Sets font size for body separately to the root font size - very important to note! */
	font-size:1.5em;
}

/* Ensure all images don't exceed boundaries*/
img {
	height:auto;
	max-width:100%;
}

a {text-decoration: none;}

/* End element rules*/

/* Below all CSS rules concern classes */

/* Header styles */

.header {
}

.header__title {
	display:inline-block;
}

.header__link {
	display: inline-block;
}

.header__logo {
	height: calc(var(--dkuk-line-height) + var(--dkuk-bg-line));
}

.header__nav {
}

/* Ends Header styles */

/* Classes for Element Sizing for Masonry */
/* I haven't actually managed to get element sizing to work proeprly, so these are hacky */
/* Please change if you know how */

/* 3 columns by default */
.grid__sizer,
.grid__item {
	width: 30%;
}

/* Set the width of the gutters */
.grid__gutter-sizer {
	width:5%;
}

/* End Element Sizing for Masonry */

/* Typography */

.large, .singular h1, .singular h2, .singular h3, .singular h4, .singular h5, .singular h6 {
    font-family: 'WorkSansBold', sans-serif;
    font-weight: bold;
    text-transform: uppercase;
	font-size:2em;
}
/* Ends Typography */

/* Post styles */

.singular {background-color: white;}

/* Typography */
/* The main types are for the menu items, the titles, and then the body text, there's also small text for captions & maybe copyright */
.singular h1, .singular h2, .singular h3, .singular h4, .singular h5, .singular h5, .singular h6, .singular ol, .singular ul, .singular p, .singular blockquote, .singular q {}

/* Post image alignment */

.singular .alignnone {
    margin: 5px 20px 20px 0;
}

.singular .alignright {
    float: right;
    margin: 0 0 1em 1em;
}

.singular .alignleft {
    float: left;
    margin: 0 1em 1em 0;
}

.singular .aligncenter {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/* Post Preview styles */
/* These use flexbox to flip the title and the thumbnail */
/* This means that in the markup it goes title > thumbnail > excerpt */
/* But that visually it goes thumbnail > title > excerpt */

.post__preview {
    border: solid #222222 calc(var(--dkuk-bg-line));
    display: flex;
    flex-direction: column;
}

.post__preview .thumbnail__link {
    order: -1;
}

/* Ends Post styles */

.menu {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	flex-direction: column;
}

/* Component styles */

/* Salon ACF */

.salon {}
.salon__prices {width:100%; text-align: left;}
.salon__prices td {padding-top:1em;}
.salon__haircut {border-bottom:dashed 2px #222222;}

/* Ends Salon ACF */

/* Podcast ACF */
.podcast {
    margin-bottom: ;
}

.podcast__title {
    display: none;
}

.podcast__file {
    width: 100%;
    margin-bottom: ;
}

.podcast__link-wrapper {
    margin-bottom: ;
}
/* Ends Podcast ACF */

/* Flickity */
.gallery__item {
	width: 100%;
}

}

.view-more {
	display: flex;
	justify-content: center;
}

.view-more__button {
	font-family: 'WorkSansBold';
	background-color: #222222;
	border: none;
	color: #fefefe;
	padding: 1rem 2rem;
	text-align: center;
	display: inline-block;
	text-transform: uppercase;
	font-size: 2rem;
}

/* Ends Component styles */

/* Footer styles */

/* Footer Nav */
.footer__nav .menu {
    flex-direction: row;
}

.footer__nav .menu-item {
    min-width: 30%;
    margin-bottom: ;
}

/* Ends Footer styles */

/* Media Queries */
/* My tendency is to construct media queries on content not on design. */
/* Have three different sizes given three columns */
/* The media queries use these values to match the flexbox ones, usually I'd move from narrow up to wide, not from wide down to narrow */
@media (max-width: 64em)  {
	/* Two columns on medium screens */
	.grid__sizer, .grid__item {
		width: 49%;
	}
	.grid__gutter-sizer {
		width:2%;
	}
	.footer__nav .menu-item {
    	min-width: 49%;
	}
}

@media (max-width: 48em) {
	body {font-size: 1.5rem;}
	.large, .post__title, .singular h1, .singular h2, .singular h3, .singular h4, .singular h5, .singular h6 {
		font-size: 2rem;
	}
	/* One column on narrow screens */
	.grid__sizer, .grid__item {
		width: 100%;
	}
	.grid__gutter-sizser {
		width:0%;
	}
	.footer__nav .menu-item {
		min-width: 100%;
	}
}

/* The styles below control the background stripes and the vertical alignment of elements to those stripes. */
/* These have been carefully calculated and matched */

/* The Stripes */
.stripes {
    background-image: repeating-linear-gradient(
		180deg,
		#fff,
		#fff var(--dkuk-line-height),
		#000 var(--dkuk-line-height),  /* previous 2 values match type height*/
		#000 calc(var(--dkuk-line-height) + var(--dkuk-bg-line)) /*add type height plys first value*/
	);
}

/* Ends Stripes */

/* Accessibility styles */
/* These are at the very end to make sure they override rules above */

/* Selection, focus, and hover rules */
nav a:hover, nav a:hover>*  {
	background-color: var(--dkuk-primary-colour);
	color: var(--dkuk-secondary-colour);
}


nav :focus, nav :focus>* {
	background-color: var(--dkuk-primary-colour);
	color: var(--dkuk-secondary-colour);
	border:none;
	outline:none;
}

/* Selection rules MUST be kept separate, god knows why */
/* They WILL NOT WORK if combined */
/* See https://css-tricks.com/overriding-the-default-text-selection-color-with-css/ */
::selection {
	background-color: var(--dkuk-primary-colour);
	color: var(--dkuk-secondary-colour);
	border:none;
	outline:none;
}

::selection>*  {
	background-color: var(--dkuk-primary-colour);
	color: var(--dkuk-secondary-colour);
	border:none;
	outline:none;
}

/* WordPress Generated Classes */
/* Text meant only for screen readers. */
/* From the Wordpress Codex */
/* https://codex.wordpress.org/CSS */

.screen-reader-text {
	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
	white-space: nowrap;
	height: 1px;
	width: 1px;
	overflow: hidden;
}

/* Ends accessibility styles */

